nextest-runner/src/reporter/displayer/snapshots/nextest_runner__reporter__displayer__imp__tests__test_slow_status_level_fail.snap
---
source: nextest-runner/src/reporter/displayer/imp.rs
assertion_line: 4643
expression: out
---
 TERMINATING [>120.000s] (─────────) my-binary-id test_name
 TERMINATING [>120.000s] (─────────) my-binary-id test_name
 TERMINATING [>120.000s] my-script: my-program --arg1
