nextest-runner/src/reporter/displayer/snapshots/nextest_runner__reporter__displayer__imp__tests__test_slow_try_prefix.snap
---
source: nextest-runner/src/reporter/displayer/imp.rs
expression: out
---
        SLOW [> 60.000s] (─────────) my-binary-id test_name
        SLOW [> 60.000s] (─────────) my-binary-id test_name
  TRY 2 SLOW [> 60.000s] (─────────) my-binary-id test_name
  TRY 3 SLOW [> 60.000s] (─────────) my-binary-id test_name
 TERMINATING [>120.000s] (─────────) my-binary-id test_name
TRY 2 TRMNTG [>120.000s] (─────────) my-binary-id test_name
