nextest-runner/src/reporter/displayer/snapshots/nextest_runner__reporter__displayer__imp__tests__verbose_command_line.snap
---
source: nextest-runner/src/reporter/displayer/imp.rs
expression: out
snapshot_kind: text
---
       START [         ] ( 1/10) my-binary-id test_name
             command: /path/to/binary --exact test_name
       START [         ] ( 1/10) my-binary-id test_with_spaces
             command: /path/to/binary --exact 'test with spaces' '--flag=value'
       START [         ] ( 1/10) my-binary-id test_special_chars
             command: /path/to/binary 'test"with"quotes' 'test'\''with'\''single'
 TRY 2 START [         ] (─────────) my-binary-id test_retry
             command: /path/to/binary --exact test_retry
 TRY 3 START [         ] (─────────) my-binary-id test_retry
             command: /path/to/binary --exact test_retry
